# entservices-runtime

./: CHANGELOG.md  CMakeLists.txt  Coverity+Report+entservices-runtime-develop.doc  Manual_Analysis_Fix_Summary.csv  build_dependencies.sh  cov_build.sh  entservices-runtime_static_scan.csv  services.cmake
.github/: CODEOWNERS  copilot-instructions.md
.github/instructions/: Plugin.instructions.md  Pluginimplementation.instructions.md  Pluginlifecycle.instructions.md  Pluginmodule.instructions.md
.github/workflows/: auto_pr_creation_target_repo_caller.yml  component-release.yml  native_full_build.yml
BrowserLauncher/: CMakeLists.txt  README.md
BrowserLauncher/cmake/: FindEssos.cmake  FindGLIB.cmake  FindLibSoup.cmake  FindWPEBackend.cmake  FindWPEWebKit.cmake  FindWaylandClient.cmake  FindWaylandScanner.cmake  FindWesterosCompositor.cmake  FindWesterosSimpleShellClient.cmake
BrowserLauncher/src/: CMakeLists.txt  browsercontroller.cpp  browsercontroller.h  browserinterface.h  launchconfig.cpp  launchconfig.h  launchconfiginterface.h  launchconfigoptions.h  main.cpp  runloop.h  simplesignalslot.h  worker.h
BrowserLauncher/src/wpewebkit/: CMakeLists.txt  wpewebkit_2.38.h  wpewebkit_2.46.h  wpewebkitbrowser.cpp  wpewebkitbrowser.h  wpewebkitconfig.cpp  wpewebkitconfig.h  wpewebkitutils.cpp  wpewebkitutils.h  wpewebkitview.cpp  wpewebkitview.h
BrowserLauncher/src/wpewebkit/extensions/: CMakeLists.txt
BrowserLauncher/src/wpewebkit/extensions/firebolt/: CMakeLists.txt  asyncbus.cpp  asyncbus.h  firebolt-transport.d.ts  firebolt-transport.md  soupfunctions.cpp  soupfunctions.h  websocketclient.cpp  websocketclient.h  wpefireboltextension.cpp
BrowserLauncher/src/wpewebkit/extensions/log/: CMakeLists.txt  logextension.c
BrowserLauncher/src/wpewebkit/extensions/webruntime/: CMakeLists.txt  webruntimeextension.cpp
BrowserLauncher/src/wpewebkit/extensions/windowminimize/: CMakeLists.txt  windowminimizeextension.c
BrowserLauncher/src/wpewebkit/resources/: CMakeLists.txt  error.html  firebolt-inject.js  firebolt-test.html  wpewebkitresourcebundle.xml
BrowserLauncher/src/wpewebkit/testing/: CMakeLists.txt  focusmanager.h  tags.h  testrunner.cpp  testrunner.h  westerosfocusmanager.cpp
BrowserLauncher/src/wpewebkit/testing/extension/: CMakeLists.txt  testrunnerextension.cpp
BrowserLauncher/tests/: CMakeLists.txt  browserlauncher_test.cc  browserlauncher_test.h  lifecycle_tests.cc  media_capabilities_tests.cc
BrowserLauncher/tests/resources/: CMakeLists.txt  media_capabilities.html  page_lifecycle.html  testsresourcebundle.xml
PerformanceMetrics/: CMakeLists.txt  PerformanceMetrics.cpp  PerformanceMetrics.h  SyslogOutput.cpp  TraceOutput.cpp
WebKitBrowser/: CookieJar.cpp  WebKitBrowser.cpp  WebKitBrowser.h
WebKitBrowser/CookieJarCrypto/: CMakeLists.txt
WebKitBrowser/InjectedBundle/: main.cpp
WebKitBrowser/cmake/: FindWPEBackend.cmake
